[project]
name = "urban-research-ui"
version = "0.1.0"
description = "Streamlit dashboard for cityscope data pipeline"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Kaveh Karbasi", email = "kkarbasi@berkeley.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "streamlit>=1.56.0",
    "cityscope",
]

[tool.uv.sources]
cityscope = { git = "https://github.com/kkarbasi/cityscope.git" }
